[gd_scene load_steps=2 format=3 uid="uid://swfynryjjexy"]

[ext_resource type="Script" uid="uid://b7w8uwuhq68qv" path="res://addons/AI_Chat_Support/ai_chat_ui.gd" id="1_33ftg"]

[node name="AIChatUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_33ftg")
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -556.0
offset_top = -304.0
offset_right = -187.0
offset_bottom = -109.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)
metadata/_edit_lock_ = true

[node name="ChatDisplay" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
autowrap_mode = 2
metadata/_edit_lock_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
metadata/_edit_lock_ = true

[node name="MessageInput" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
metadata/_edit_lock_ = true

[node name="SendButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Send"
metadata/_edit_lock_ = true
